# LearningAudioAndVideo

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/audioandvideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/common/: log.h
app/src/main/java/com/example/audioandvideo/: AudioActivity.java  BaseApplication.java  Common.java  MainActivity.java  Util.java
app/src/main/java/com/example/audioandvideo/module/: AudioRecorder.java
app/src/main/res/layout/: activity_audio.xml  activity_main.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/test/java/com/example/audioandvideo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
